@@ -5,13 +5,20 @@ Description:
     given in CamelCase or under_score and should not be suffixed with 'Model'.
 
     The generator creates a model class in app/models, a test suite in
-    test/unit, and test fixtures in test/fixtures/singular_name.yml.
+    test/unit, and test fixtures in test/fixtures/app/models/.
 
+    You can set the initial columns for the Model table. This will be added to
+    the first version in this model migration.
+    
 Example:
     >> generate model Account
 
     This will create an Account model:
         Model:      app/models/account.php
+        Installer:      app/installers/account_installer.php
         Test:       test/unit/account_test.php
-        Fixtures:   test/fixtures/accounts.yml
 
+
+    >> generate model Video title, length double, author, is_searchable
+    
+    This will create a video model and an installer with selected columns.
