@@ -5,8 +5,12 @@ class <?php  echo $class_name?>Installer extends AkInstaller
     function up_1()
     {
         $this->createTable('<?php  echo AkInflector::tableize($class_name); ?>', "
+        <?php  if(empty($table_columns)) : ?>
           id,
           name
+         <?php else: ?>
+         <?php echo $table_columns; ?>
+         <?php endif; ?>
         ");
     }
     
